# AirTransportationDRF

./: .gitignore  Dockerfile  backup.sh  backup_to_yandex.py  manage.py  pyproject.toml  setup.sh
abstract_models/: models.py
air_transportation/: asgi.py  settings.py  urls.py  wsgi.py
aircraft/: models.py  resource.py  serializers.py  urls.py  views.py
aircraft/migrations/: 0001_initial.py  0002_characteristicaircraft_descriptionaircraft_and_more.py  0003_aircraftcharacteristic_aircraftdescription_and_more.py  0004_aircraft_busy.py  0005_remove_aircraftcharacteristic_assistant_pilot_and_more.py  0006_remove_aircraftdescription_image.py  0007_alter_aircraftcharacteristic_capacity_peoples.py
available_cities/: apps.py  models.py  serializers.py  urls.py  views.py
available_cities/migrations/: 0001_initial.py
aviation_personnel/: apps.py  models.py  serializers.py  urls.py  views.py
aviation_personnel/migrations/: 0001_initial.py  0002_aviationpersonnel_busy.py  0003_aviationpersonnel_flight.py
client/: models.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_remove_client_client_order_id_client_arrival_city_and_more.py  0003_alter_client_email_alter_client_telegram_id.py  0004_remove_client_departure_city_client_arrival_date_and_more.py  0005_client_departure_city.py  0006_remove_client_arrival_city_and_more.py  0007_alter_client_order.py  0008_clientorder_desired_aircraft.py  (+2 more)
flight/: models.py  serializers.py  urls.py  views.py
scripts/: backup.sh  planner.sh  setup.sh
utils/: export.py  functions.py
(+7 files in other folders)
